# che-rewriter

./: .gitignore  README.md  pyproject.toml
configs/: datasets.yaml
data/examples/: rioplatense_seed_source.jsonl  sample_valid.jsonl
docs/sdd/WIP/001 - dataset format/: SPEC.md
docs/sdd/WIP/003 - lenguaje claro ingestion/: SPEC.md
docs/sdd/done/002 - dataset source/: SPEC.md
scripts/: convert_lenguaje_claro.py  convert_rioplatense_seed.py  validate_rioplatense_seed_source.py
src/che_rewriter/: dataset.py
src/che_rewriter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/unit/: test_jsonl_dataset_format.py
