[project]
name = "che-rewriter"
version = "0.1.0"
description = "Fine-tuned LLM for rewriting neutral Spanish into Rioplatense Spanish."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Francisco Vega" }
]

dependencies = [
  "torch",
  "transformers",
  "datasets",
  "accelerate",
  "bitsandbytes",
  "peft",
  "trl",
  "sentencepiece",
  "protobuf",
  "scikit-learn",
  "evaluate",
  "fastapi",
  "uvicorn",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]